--- a/index.html
+++ b/index.html
@@ -191,6 +191,59 @@
             </ul>
         </div>
     </section>
+    <section>
+        <div class="container">
+            <h2>Entre em contato</h2>
+            <form>
+                <div class="form-campo">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome">
+                </div>
+                <div class="form-campo">
+                    <label for="telefone">Telefone</label>
+                    <input type="tel" id="telefone">
+                </div>
+                <div class="form-campo">
+                    <label for="email">E-mail</label>
+                    <input type="email" id="email">
+                </div>
+                <div class="form-campo">
+                    <label for="veiculo">Veículo de Interesse</label>
+                    <input type="text" id="veiculo">
+                </div>
+                <div class="form-campo">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea id="mensagem"></textarea>
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+    </section>
+    <footer>
+        <div class="container container-flex">
+            <p>
+                2023 &copy; EBAC Motors - Todos os direiros reservados
+            </p>
+            <ul class="container-flex">
+                <li>
+                    <a href="#">
+                        <img src="/media/icons/facebook.png" alt="Facebook Logo">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="/media/icons/instagram.png" alt="Instagram Logo">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img src="/media/icons/youtube.png" alt="Youtube Logo">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
